--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.0",
     "sweetalert2": "^10.16.6",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
@@ -46,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.16",
     "node-sass": "^5.0.0"
   }
 }
